# rag_cli_builder

./: .gitignore  README.md  escopo.py  pyproject.toml  requirements.txt
baseline/: baseline_bm25.py  coleta_arxiv.py  evaluate.py  hybrid_retriever.py  knn_retriever.py  reranker.py
data/: arxiv_raw.jsonl  corpus.jsonl  qrels.tsv  queries.tsv
data/runs/: bm25.trec  hybrid.trec  knn.trec  reranked.trec
eval/: queries.tsv  queries_template.tsv
notebooks/: 01_coleta_arxiv.ipynb  02_baseline_bm25.ipynb  03_retrieval_knn.ipynb
notebooks/data/: .collection_checkpoint.json  arxiv_raw.jsonl
resource/: coleta_arxiv.ipynb
resource/data/: arxiv_raw.jsonl
resource/material_de_apoio/: baseline_bm25.ipynb
resource/material_de_apoio/eval/: qrels_example.tsv  runs_bm25_example.trec
resource/material_de_apoio/skeleton/: CHECKLIST.md  README.md  requirements.txt
scripts/: collect_corpus.py  generate_dev_corpus.py  search.py  validate_corpus.py
specs/001-arxiv-corpus-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-arxiv-corpus-ingestion/checklists/: requirements.md
src/: main.py
src/collection/: __init__.py  collector.py  config.py  fetcher.py  normalizer.py  query_builder.py
src/common/: config.py  utils.py
src/evaluation/: evaluate.py
src/modules/: hybrid.py  reranker.py
src/preprocessing/: __init__.py  config.py  pipeline.py  tokenizer.py
src/rag_builder/: main.py
src/rag_builder/utils/material_de_apoio/eval/: evaluate.py
src/retrieval/: bm25.py  knn.py
src/retrievers/: __init__.py  bm25.py  dense.py
(+4 files in other folders)
