[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-cli-builder"
version = "1.0.0"
description = "Uma CLI para estruturar pipelines RAG"
authors = [
  { name="Seu Nome", email="seu.email@ufms.br" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rank_bm25",
    "scikit-learn",
    "sentence-transformers",
    "pandas",
    "numpy",
    "jupyter"
]

[project.scripts]
rag-setup = "rag_builder.main:main"